--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,214 +1,210 @@
 /* スマートフォン向けレイアウト ================================ */
 @media screen and (max-width: 480px){
   /* form ================================ */
-.form {
-  width: 80vw;
-  margin: 0 auto;
-  background-color: white;
-  box-shadow: 0 2px 6px #c1ced7;
-  .form-body {
-    padding: 2vh;
-    overflow: hidden;
-    text-align: left;
-    input, textarea, select{
-      margin-bottom: 1.5vh;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    input {
-      width: 100%;
-      border: 1px solid #d8dadf;
-      padding: 10px;
-      color: #57575f;
-      font-size: 14px;
-      letter-spacing: 2px;
-      border-radius: 2px;
-    }
-    .form-integer{
-      display: flex;
-      width: 50%;
-      p{
-        margin-left: 7px;
-        font-size: 14px;
-        padding-top: 15px;
-      }
-    }
-    textarea {
-      width: 100%;
-      min-height: 110px;
-      font-size: 14px;
-      letter-spacing: 2px;
-    }
-    input[type="submit"] {
-      background-color: #3367D6;
-      color: white;
-      cursor: pointer;
-      font-weight: 300;
-      width: 25vw;
-      border-radius: 6px;
-      margin-top: 8px;
-      margin-bottom: 0;
-      float: right;
-      clear: both;
-    }
-    .form-error {
-      color: #ff4d75;
-    }
-    label{
-      display: block;
+  .form {
+    width: 80vw;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 2px 6px #c1ced7;
+    .form-body {
+      padding: 2vh;
+      overflow: hidden;
       text-align: left;
-      font-size: 14px;
-    }
+      input, textarea, select{
+        margin-bottom: 1.5vh;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      input {
+        width: 100%;
+        border: 1px solid #d8dadf;
+        padding: 10px;
+        color: #57575f;
+        font-size: 14px;
+        letter-spacing: 2px;
+        border-radius: 2px;
+      }
+      .form-integer{
+        display: flex;
+        width: 50%;
+        p{
+          margin-left: 7px;
+          font-size: 14px;
+          padding-top: 15px;
+        }
+      }
+      textarea {
+        width: 100%;
+        min-height: 110px;
+        font-size: 14px;
+        letter-spacing: 2px;
+      }
+      input[type="submit"] {
+        background-color: #3367D6;
+        color: white;
+        cursor: pointer;
+        font-weight: 300;
+        width: 25vw;
+        border-radius: 6px;
+        margin-top: 8px;
+        margin-bottom: 0;
+        float: right;
+        clear: both;
+      }
+      .form-error {
+        color: #ff4d75;
+      }
+      label{
+        display: block;
+        text-align: left;
+        font-size: 14px;
+      }
+    }  
   }  
-}  
-.form-heading {
-  text-align: center;
-  font-weight: 400;
-  font-size: 20px;
-  color: gray;
-  padding: 1vh;
+  .form-heading {
+    text-align: center;
+    font-weight: 400;
+    font-size: 20px;
+    color: gray;
+    padding: 1vh;
+  }  
 }  
 
 /* タブレット向けレイアウト ================================ */
 @media screen and (min-width: 481px) and (max-width: 959px){
   /* form ================================ */
-.form {
-  width: 50vw;
-  // max-width: 600px;
-  margin: 0 auto;
-  background-color: white;
-  box-shadow: 0 2px 6px #c1ced7;
-  .form-body {
-    padding: 2vh;
-    overflow: hidden;
-    text-align: left;
-    input, textarea, select{
-      margin-bottom: 1.5vh;
-    }
-    input {
-      // width: 100%;
-      width: 100%;
-      border: 1px solid #d8dadf;
-      padding: 10px;
-      color: #57575f;
-      font-size: 16px;
-      letter-spacing: 2px;
-      border-radius: 2px;
-    }
-    .form-integer{
-      display: flex;
-      width: 50%;
-      p{
-        margin-left: 7px;
+  .form {
+    width: 50vw;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 2px 6px #c1ced7;
+    .form-body {
+      padding: 2vh;
+      overflow: hidden;
+      text-align: left;
+      input, textarea, select{
+        margin-bottom: 1.5vh;
+      }
+      input {
+        width: 100%;
+        border: 1px solid #d8dadf;
+        padding: 10px;
+        color: #57575f;
         font-size: 16px;
-        padding-top: 15px;
+        letter-spacing: 2px;
+        border-radius: 2px;
+      }
+      .form-integer{
+        display: flex;
+        width: 50%;
+        p{
+          margin-left: 7px;
+          font-size: 16px;
+          padding-top: 15px;
+        }
+      }
+      textarea {
+        width: 100%;
+        min-height: 110px;
+        font-size: 16px;
+        letter-spacing: 2px;
+      }
+      input[type="submit"] {
+        background-color: #3367D6;
+        color: white;
+        cursor: pointer;
+        font-weight: 300;
+        width: 120px;
+        border-radius: 6px;
+        margin-top: 8px;
+        margin-bottom: 0;
+        float: right;
+        clear: both;
+      }
+      .form-error {
+        color: #ff4d75;
+      }
+      label{
+        display: block;
+        text-align: left;
       }
     }
-    textarea {
-      width: 100%;
-      min-height: 110px;
-      font-size: 16px;
-      letter-spacing: 2px;
-    }
-    input[type="submit"] {
-      background-color: #3367D6;
-      color: white;
-      cursor: pointer;
-      font-weight: 300;
-      width: 120px;
-      border-radius: 6px;
-      margin-top: 8px;
-      margin-bottom: 0;
-      float: right;
-      clear: both;
-    }
-    .form-error {
-      color: #ff4d75;
-    }
-    label{
-      display: block;
-      text-align: left;
-    }
   }
-}
-.form-heading {
-  // width: 50vw;
-  text-align: center;
-  font-weight: 400;
-  margin: 15px 0;
-  font-size: 30px;
-  color: gray;
-}
-}
-
+  .form-heading {
+    text-align: center;
+    font-weight: 400;
+    margin: 15px 0;
+    font-size: 30px;
+    color: gray;
+  }
 }
 
 /* PC向けレイアウト===================== */
 @media screen and (min-width: 960px){
 /* form ================================ */  
-.form {
-  max-width: 600px;
-  margin: 0 auto;
-  background-color: white;
-  box-shadow: 0 2px 6px #c1ced7;
-  .form-body {
-    padding: 30px;
-    overflow: hidden;
-    text-align: left;
-    input, textarea, select{
-      margin-bottom: 12px;
-    }  
-    input {
-      width: 100%;
-      border: 1px solid #d8dadf;
-      padding: 10px;
-      color: #57575f;
-      font-size: 16px;
-      letter-spacing: 2px;
-      border-radius: 2px;
-    }  
-    .form-integer{
-      display: flex;
-      width: 50%;
-      p{
-        margin-left: 7px;
+  .form {
+    min-width: 450px;
+    margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 2px 6px #c1ced7;
+    .form-body {
+      padding: 30px;
+      overflow: hidden;
+      text-align: left;
+      input, textarea, select{
+        margin-bottom: 12px;
+      }  
+      input {
+        width: 100%;
+        border: 1px solid #d8dadf;
+        padding: 10px;
+        color: #57575f;
         font-size: 16px;
-        padding-top: 15px;
+        letter-spacing: 2px;
+        border-radius: 2px;
+      }  
+      .form-integer{
+        display: flex;
+        width: 50%;
+        p{
+          margin-left: 7px;
+          font-size: 16px;
+          padding-top: 15px;
+        }  
+      }  
+      textarea {
+        width: 100%;
+        min-height: 110px;
+        font-size: 16px;
+        letter-spacing: 2px;
+      }  
+      input[type="submit"] {
+        background-color: #3367D6;
+        color: white;
+        cursor: pointer;
+        font-weight: 300;
+        width: 120px;
+        border-radius: 6px;
+        margin-top: 8px;
+        margin-bottom: 0;
+        float: right;
+        clear: both;
+      }  
+      .form-error {
+        color: #ff4d75;
+      }  
+      label{
+        display: block;
+        text-align: left;
       }  
     }  
-    textarea {
-      width: 100%;
-      min-height: 110px;
-      font-size: 16px;
-      letter-spacing: 2px;
-    }  
-    input[type="submit"] {
-      background-color: #3367D6;
-      color: white;
-      cursor: pointer;
-      font-weight: 300;
-      width: 120px;
-      border-radius: 6px;
-      margin-top: 8px;
-      margin-bottom: 0;
-      float: right;
-      clear: both;
-    }  
-    .form-error {
-      color: #ff4d75;
-    }  
-    label{
-      display: block;
-      text-align: left;
-    }  
   }  
-}  
-.form-heading {
-  text-align: center;
-  font-weight: 400;
-  margin: 20px 0;
-  font-size: 40px;
-  color: gray;
-}  
+  .form-heading {
+    text-align: center;
+    font-weight: 400;
+    margin: 20px 0;
+    font-size: 40px;
+    color: gray;
+  }  
 }
 
 
