--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -77,6 +77,7 @@
       }
       .about-signup{ 
         button{
+          -webkit-appearance: none;
           background-color: #3367D6;
           color: white;
           border: none;
@@ -184,6 +185,7 @@
       }
       .about-signup{ 
         button{
+          -webkit-appearance: none;
           background-color: #3367D6;
           color: white;
           border: none;
@@ -293,6 +295,7 @@
       }
       .about-signup{ 
         button{
+          -webkit-appearance: none;
           background-color: #3367D6;
           color: white;
           border: none;
