--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -41,6 +41,7 @@
     }
     .top-signup{
       button{
+        -webkit-appearance: none;
         background-color: #3367D6;
         color: white;
         border: none;
@@ -113,6 +114,7 @@
     }
     .top-signup{
       button{
+        -webkit-appearance: none;
         background-color: #3367D6;
         color: white;
         border: none;
@@ -187,6 +189,7 @@
     }
     .top-signup{
       button{
+        -webkit-appearance: none;
         background-color: #3367D6;
         color: white;
         border: none;
