--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2,17 +2,26 @@
 @media screen and (max-width: 480px){
 /* 共通===================================================== */
   body {
-    background-image: url('/top_images/gym_2_phone.jpg');
-    background-color:rgba(255,255,255,0.35);
-    background-blend-mode:lighten;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
     position: relative;
     padding-bottom: 60px;
     box-sizing: border-box;
+  }
+  
+  body:before{
+    content:"";
+    display:block;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:-1;
+    width:100%;
+    height:100vh;
+    background: url('/top_images/gym_2_phone.jpg') center no-repeat;
+    background-size:cover;
+    background-color:rgba(255,255,255,0.35);
+    background-blend-mode:lighten;
   }
   
   .main {
