--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -39,6 +39,7 @@
         letter-spacing: 2px;
       }
       input[type="submit"] {
+        -webkit-appearance: none;
         background-color: #3367D6;
         color: white;
         cursor: pointer;
@@ -109,6 +110,7 @@
         letter-spacing: 2px;
       }
       input[type="submit"] {
+        -webkit-appearance: none;
         background-color: #3367D6;
         color: white;
         cursor: pointer;
@@ -178,6 +180,7 @@
         letter-spacing: 2px;
       }  
       input[type="submit"] {
+        -webkit-appearance: none;
         background-color: #3367D6;
         color: white;
         cursor: pointer;
