--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -97,6 +97,7 @@ header {
       padding-right: 5px;
     }
     input[type="submit"] {
+      -webkit-appearance: none;
       padding: 0 20px;
       float: left;
       line-height: 64px;
@@ -151,6 +152,7 @@ header {
       padding-right: 5px;
     }
     input[type="submit"] {
+      -webkit-appearance: none;
       padding: 0 20px;
       float: left;
       line-height: 64px;
