--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,42 +4,15 @@
       <div class="user-show-content">
         <%= render "users/user_info" %>
         <ul class="user-tabs">
-          <li class="active"><%= link_to("投稿", "/users/#{@user.id}") %></li>
-          <li><%= link_to "いいね!", "/users/#{@user.id}/likes" %></li>
+          <li id="charts-tab" class="active">グラフ</li>
+          <li id="posts-tab">投稿</li>
+          <li id="likes-tab">いいね!</li>
         </ul>
-        <% @user.posts.each do |post| %>
-        <div class="posts-index-wrapper">
-          <div class="posts-index-item">
-            <div class="post-left">
-              <img src="<%= "/user_images/#{post.user.icon_image_name}" %>">
-            </div>
-            <div class="post-center">
-              <div class="post-user-name">
-                <p><%= post.user.name %></p>
-              </div>
-              <ul>
-                <li>投稿日：<%= post.recording_date %></li>
-                <li>体重：<%= post.body_weight %>kg</li>
-                <li>体脂肪率：<%= post.body_fat_percentage %>%</li>
-                <li>トレーニングメニュー：<%= post.training_menu %></li>
-                <li>食事メニュー：<%= post.meal_menu %></li>
-                <li>総摂取カロリー：<%= post.total_calorie %>kcal</li>
-              </ul>
-            </div>
-            <div class="post-right">
-              <% if post.post_image_name != nil %>
-              <div class="post-image-wrapper">
-                <img class="post-image" src="<%= "/post_images/#{post.post_image_name}" %>">
-              </div>
-              <% end %>
-            </div>
-          </div>
-          <div class="post-menus">
-            <%= link_to "詳細ページへ", post_path(post) %>
-          </div>
-        </div>
-        <% end %>
+        <%= render "users/user_charts_tab" %>
+        <%= render "users/user_posts_tab" %>
+        <%= render "users/user_likes_tab" %>
       </div>
     </div>
   </div>
+</div>
 </div>
